--- a/landing/templates/base.html
+++ b/landing/templates/base.html
@@ -74,40 +74,44 @@
 					
 				</div>
 
-				<div class="container">
-					<div class="row py-5">
-						<div class="col">
+				{% if request.get_full_path == "/contact/" or request.get_full_path == "/about/" %}
+				<div class="bg-tertiary border-top border-color-dark">
+					<div class="container">
+						<div class="row py-5">
+							<div class="col">
 					
-							<div class="owl-carousel owl-theme mb-0" data-plugin-options="{'responsive': {'0': {'items': 1}, '476': {'items': 1}, '768': {'items': 5}, '992': {'items': 7}, '1200': {'items': 7}}, 'autoplay': true, 'autoplayTimeout': 3000, 'dots': false}">
-								<div>
-									<img class="img-fluid opacity-2" src="{% static "img/logos/logo-1.png" %}" alt="">
+								<div class="owl-carousel owl-theme mb-0" data-plugin-options="{'responsive': {'0': {'items': 1}, '476': {'items': 1}, '768': {'items': 5}, '992': {'items': 7}, '1200': {'items': 7}}, 'autoplay': true, 'autoplayTimeout': 3000, 'dots': false}">
+									<div>
+										<img class="img-fluid opacity-2" src="{% static "img/logos/logo-1.png" %}" alt="">
+									</div>
+									<div>
+										<img class="img-fluid opacity-2" src="{% static "img/logos/logo-2.png" %}" alt="">
+									</div>
+									<div>
+										<img class="img-fluid opacity-2" src="{% static "img/logos/logo-3.png" %}" alt="">
+									</div>
+									<div>
+										<img class="img-fluid opacity-2" src="{% static "img/logos/logo-4.png" %}" alt="">
+									</div>
+									<div>
+										<img class="img-fluid opacity-2" src="{% static "img/logos/logo-5.png" %}" alt="">
+									</div>
+									<div>
+										<img class="img-fluid opacity-2" src="{% static "img/logos/logo-6.png" %}" alt="">
+									</div>
+									<div>
+										<img class="img-fluid opacity-2" src="{% static "img/logos/logo-4.png" %}" alt="">
+									</div>
+									<div>
+										<img class="img-fluid opacity-2" src="{% static "img/logos/logo-2.png" %}" alt="">
+									</div>
 								</div>
-								<div>
-									<img class="img-fluid opacity-2" src="{% static "img/logos/logo-2.png" %}" alt="">
-								</div>
-								<div>
-									<img class="img-fluid opacity-2" src="{% static "img/logos/logo-3.png" %}" alt="">
-								</div>
-								<div>
-									<img class="img-fluid opacity-2" src="{% static "img/logos/logo-4.png" %}" alt="">
-								</div>
-								<div>
-									<img class="img-fluid opacity-2" src="{% static "img/logos/logo-5.png" %}" alt="">
-								</div>
-								<div>
-									<img class="img-fluid opacity-2" src="{% static "img/logos/logo-6.png" %}" alt="">
-								</div>
-								<div>
-									<img class="img-fluid opacity-2" src="{% static "img/logos/logo-4.png" %}" alt="">
-								</div>
-								<div>
-									<img class="img-fluid opacity-2" src="{% static "img/logos/logo-2.png" %}" alt="">
-								</div>
+					
 							</div>
-							
 						</div>
 					</div>
 				</div>
+				{% endif %}
 			</div>
 		</div>
 
