--- a/landing/templates/coaching.html
+++ b/landing/templates/coaching.html
@@ -11,25 +11,28 @@
         <p class="text-tertiary mb-0 appear-animation animated maskUp appear-animation-visible" data-appear-animation="maskUp" data-appear-animation-delay="400" style="animation-delay: 400ms;">Feel free to ask for details, don't save any questions!</p>
     </div>
 </div>
+
+
 <div class="container-fluid">
     <div class="row featured-boxes-full featured-boxes-full-scale clearfix">
-        <div class="col-lg-4 featured-box-full featured-box-full-primary" style="height: 302px;">
+        <div class="col-lg-4 featured-box-full featured-box-full-tertiary" style="height: 302px;">
             <i class="icon-directions icons"></i>
             <h4 class="mt-3">1 - BRIEF</h4>
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing metus elit. Quisque rutrum pellentesque imperdiet. Quisque rutrum pellentesque imperdiet.</p>
         </div>
-        <div class="col-lg-4 featured-box-full featured-box-full-primary" style="height: 302px;">
+        <div class="col-lg-4 featured-box-full featured-box-full-tertiary" style="height: 302px;">
             <i class="icon-puzzle icons"></i>
             <h4 class="mt-3">2 - CREATION</h4>
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing metus elit. Quisque rutrum pellentesque imperdiet. Quisque rutrum pellentesque imperdiet.</p>
         </div>
-        <div class="col-lg-4 featured-box-full featured-box-full-primary" style="height: 302px;">
+        <div class="col-lg-4 featured-box-full featured-box-full-tertiary" style="height: 302px;">
             <i class="icon-rocket icons"></i>
             <h4 class="mt-3">3 - LAUNCH</h4>
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing metus elit.</p>
         </div>
     </div>
 </div>
+<hr>
 <div class="container py-4 my-5">
     <div class="row justify-content-center mb-4">
         <div class="col-md-12 col-lg-10">
@@ -45,7 +48,7 @@
                                     </span>
                                 </span>
                             </span>									
-                            <p class="text-color-dark font-weight-bold mb-0 pt-2 text-2 pb-0">Strategy</p>
+                            <p class="text-color-hover-tertiary  font-weight-bold mb-0 pt-2 text-2 pb-0">Strategy</p>
                         </a>
                     </li>
                     <li class="nav-item">
@@ -57,7 +60,7 @@
                                     </span>
                                 </span>
                             </span>									
-                            <p class="text-color-dark font-weight-bold mb-0 pt-2 text-2 pb-0">Creative</p>
+                            <p class="text-color-hover-tertiary font-weight-bold mb-0 pt-2 text-2 pb-0">Creative</p>
                         </a>
                     </li>
                     <li class="nav-item">
@@ -69,7 +72,7 @@
                                     </span>
                                 </span>
                             </span>									
-                            <p class="text-color-dark font-weight-bold mb-0 pt-2 text-2 pb-0">Development</p>
+                            <p class="text-color-hover-tertiary font-weight-bold mb-0 pt-2 text-2 pb-0">Development</p>
                         </a>
                     </li>
                     <li class="nav-item active">
@@ -81,29 +84,29 @@
                                     </span>
                                 </span>
                             </span>									
-                            <p class="text-color-dark font-weight-bold mb-0 pt-2 text-2 pb-0">Marketing</p>
+                            <p class="text-color-hover-tertiary font-weight-bold mb-0 pt-2 text-2 pb-0">Marketing</p>
                         </a>
                     </li>
                 </ul>
                 <div class="tab-content">
                     <div class="tab-pane" id="tabsNavigationSimpleIcons1">
                         <div class="text-center">
-                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur pellentesque neque eget diam posuere porta. Quisque ut nulla at nunc <a href="#">vehicula</a> lacinia. Proin adipiscing porta tellus, ut feugiat nibh adipiscing sit amet. In eu justo a felis faucibus ornare vel id metus. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae;</p>
+                            <p class="text-tertiary">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur pellentesque neque eget diam posuere porta. Quisque ut nulla at nunc <a href="#">vehicula</a> lacinia. Proin adipiscing porta tellus, ut feugiat nibh adipiscing sit amet. In eu justo a felis faucibus ornare vel id metus. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae;</p>
                         </div>
                     </div>
                     <div class="tab-pane" id="tabsNavigationSimpleIcons2">
                         <div class="text-center">
-                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur pellentesque neque eget diam posuere porta. Quisque ut nulla at nunc <a href="#">vehicula</a> lacinia. Proin adipiscing porta tellus, ut feugiat nibh adipiscing sit amet. In eu justo a felis faucibus ornare vel id metus. Proin adipiscing porta tellus, ut feugiat nibh adipiscing sit amet. In eu justo a felis faucibus ornare vel id metus. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae;</p>
+                            <p class="text-tertiary">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur pellentesque neque eget diam posuere porta. Quisque ut nulla at nunc <a href="#">vehicula</a> lacinia. Proin adipiscing porta tellus, ut feugiat nibh adipiscing sit amet. In eu justo a felis faucibus ornare vel id metus. Proin adipiscing porta tellus, ut feugiat nibh adipiscing sit amet. In eu justo a felis faucibus ornare vel id metus. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae;</p>
                         </div>
                     </div>
                     <div class="tab-pane" id="tabsNavigationSimpleIcons3">
                         <div class="text-center">
-                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur pellentesque neque eget diam posuere porta. Quisque ut nulla at nunc <a href="#">vehicula</a> lacinia. Proin adipiscing porta tellus, ut feugiat nibh adipiscing sit amet. In eu justo a felis faucibus ornare vel id metus.Proin adipiscing porta tellus, ut feugiat nibh adipiscing sit amet. In eu justo a felis faucibus ornare vel id metus. Proin adipiscing porta tellus, ut feugiat nibh adipiscing sit amet. In eu justo a felis faucibus ornare vel id metus. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae;</p>
+                            <p class="text-tertiary">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur pellentesque neque eget diam posuere porta. Quisque ut nulla at nunc <a href="#">vehicula</a> lacinia. Proin adipiscing porta tellus, ut feugiat nibh adipiscing sit amet. In eu justo a felis faucibus ornare vel id metus.Proin adipiscing porta tellus, ut feugiat nibh adipiscing sit amet. In eu justo a felis faucibus ornare vel id metus. Proin adipiscing porta tellus, ut feugiat nibh adipiscing sit amet. In eu justo a felis faucibus ornare vel id metus. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae;</p>
                         </div>
                     </div>
                     <div class="tab-pane active" id="tabsNavigationSimpleIcons4">
                         <div class="text-center">
-                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur pellentesque neque eget diam posuere porta. Quisque ut nulla at nunc <a href="#">vehicula</a> lacinia. In eu justo a felis faucibus ornare vel id metus. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae;</p>
+                            <p class="text-tertiary">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur pellentesque neque eget diam posuere porta. Quisque ut nulla at nunc <a href="#">vehicula</a> lacinia. In eu justo a felis faucibus ornare vel id metus. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae;</p>
                         </div>
                     </div>
                 </div>
@@ -118,13 +121,12 @@
         </div>
     </div>
 </div>
-<hr>
-<section class="section bg-color-grey-scale-1 section-height-3 border-0 m-0">
+<section class="section bg-tertiary section-height-3 border-0 m-0">
     <div class="container pb-2">
         <div class="row">
             <div class="col-lg-6 text-center text-md-left mb-5 mb-lg-0">
-                <h2 class="text-color-dark font-weight-normal text-6 mb-2">About <strong class="font-weight-extra-bold">Our Clients</strong></h2>
-                <p class="lead">Lorem ipsum dolor sit amet, consectetur adipiscing elit massa enim. Nullam id varius nunc.</p>
+                <h2 class="text-primary font-weight-normal text-6 mb-2">About <strong class="font-weight-extra-bold">Our Clients</strong></h2>
+                <p class="lead text-secondary">Lorem ipsum dolor sit amet, consectetur adipiscing elit massa enim. Nullam id varius nunc.</p>
                 <div class="row justify-content-center my-5">
                     <div class="col-8 text-center col-md-4">
                         <img src="{% static "img/logos/logo-1.png" %}" class="img-fluid hover-effect-3" alt="">
@@ -138,9 +140,8 @@
                 </div>
             </div>
             <div class="col-lg-6">
-                <div class="owl-carousel owl-theme nav-style-1 stage-margin owl-loaded owl-drag owl-carousel-init" data-plugin-options="{'responsive': {'576': {'items': 1}, '768': {'items': 1}, '992': {'items': 1}, '1200': {'items': 1}}, 'loop': true, 'nav': false, 'dots': false, 'stagePadding': 40, 'autoplay': true, 'autoplayTimeout': 6000, 'loop': true}" style="height: auto;">
-                    
-                    
+                <div class="owl-carousel owl-theme nav-style-1 stage-margin owl-loaded owl-drag owl-carousel-init" data-plugin-options="{'responsive': {'576': {'items': 1}, '768': {'items': 1}, '992': {'items': 1}, '1200': {'items': 1}}, 'loop': true, 'nav': true, 'dots': false, 'stagePadding': 40, 'autoplay': true, 'autoplayTimeout': 6000, 'loop': true}" style="height: auto;">
+
                 <div class="owl-stage-outer"><div class="owl-stage" style="transform: translate3d(-920px, 0px, 0px); transition: all 0.25s ease 0s; width: 2840px; padding-left: 40px; padding-right: 40px;"><div class="owl-item cloned" style="width: 460px;"><div>
                         <div class="testimonial testimonial-style-2 testimonial-with-quotes testimonial-quotes-dark testimonial-remove-right-quote pl-md-4 mb-0">
                             <div class="testimonial-author">
