--- a/landing/templates/contact.html
+++ b/landing/templates/contact.html
@@ -24,8 +24,8 @@
                     <h4 class="text-tertiary mt-2 mb-1">Other <strong>Contacts</strong></h4>
                     <ul class="list list-icons list-icons-style-2 mt-2">
                         <li><i class="fab fa-linkedin-in"></i> <strong class="text-tertiary">LinkedIn:</strong> <a href="https://www.linkedin.com/in/jessica-ocquaye-mcipd-13b03384/?originalSubdomain=uk" target="_blank">Jessica Ocquaye MCIPD</a></li>
-                        <li><i class="fas fa-phone top-6"></i> <strong class="text-tertiary">Phone:</strong> (123) 456-789</li>
-                        <li><i class="fas fa-envelope top-6"></i> <strong class="text-tertiary">Email:</strong> <a href="mailto:info@jfmconsult.com">info@jfmconsult.com</a></li>
+                        <li><i class="fas fa-phone top-6"></i> <strong class="text-tertiary">Phone: </strong><a href="tel:123456789" target='tel'>(123) 456-789</a></li>
+                        <li><i class="fas fa-envelope top-6"></i> <strong class="text-tertiary">Email:</strong> <a href="mailto:info@jfmconsult.com" target="mailto">info@jfmconsult.com</a></li>
                     </ul>
                 </div>
                 
