--- a/landing/templates/index.html
+++ b/landing/templates/index.html
@@ -239,7 +239,7 @@
 </div>
 
 
-<section class="section section-tertiary border-0 appear-animation" data-appear-animation="fadeIn">
+<section class="section section-tertiary mb-0 border-0 appear-animation" data-appear-animation="fadeIn">
     <div class="container">
         <div class="row">
             <div class="col appear-animation" data-appear-animation="fadeInUpShorter" data-appear-animation-delay="200">
