--- a/landing/templates/components/nav.html
+++ b/landing/templates/components/nav.html
@@ -60,7 +60,7 @@
                 <a href="https://www.linkedin.com/in/jessica-ocquaye-mcipd-13b03384/?originalSubdomain=uk" target="_blank" class="header-nav-features-toggle pl-1"><i class="fab fa-linkedin-in text-color-primary text-hover-light header-nav-top-icon"></i></a>
               </div>
               <div class="header-nav-feature header-nav-features-search d-inline-flex">
-                <a href="mailto:info@jfmconsult.co.uk" class="header-nav-features-toggle  pl-2"><i class="far fa-envelope text-color-primary text-hover-light header-nav-top-icon"></i></a>
+                <a href="mailto:info@jfmconsult.co.uk" class="header-nav-features-toggle  pl-2" target='mailto'><i class="far fa-envelope text-color-primary text-hover-light header-nav-top-icon"></i></a>
               </div>
             </div>
           </div>
