class based views

--- a/landing/templates/coaching.html
+++ b/landing/templates/coaching.html
@@ -12,6 +12,54 @@
     </div>
 </div>
 
+<div class="container">
+    <div class="row py-5">
+        <div class="col">
+            <div class="row text-center pb-5">
+                <div class="col-md-9 mx-md-auto">
+                    <div class="overflow-hidden mb-3">
+                        <h1 class="word-rotator slide text-tertiary font-weight-bold text-8 mb-0 appear-animation animated appear-animation-visible" data-appear-animation="maskUp">
+                            <span>We are Porto, We </span>
+                            <span class="word-rotator-words" style="width: 93.7812px;">
+                                <b class="text-primary is-hidden">Create</b>
+                                <b class="text-primary is-visible">Build</b>
+                                <b class="text-primary is-hidden">Develop</b>
+                            </span>
+                            <span> Solutions</span>
+                        </h1>
+                    </div>
+                    <div class="overflow-hidden mb-3">
+                        <p class="lead mb-0 appear-animation animated appear-animation-visible text-quaternary" data-appear-animation="maskUp" data-appear-animation-delay="200">
+                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce elementum, nulla vel pellentesque consequat, ante nulla hendrerit arcu, ac tincidunt mauris lacus sed leo.
+                        </p>
+                    </div>
+                </div>
+            </div>
+
+            <div class="row mt-3 mb-5">
+                <div class="col-md-4 appear-animation animated appear-animation-visible about-section" data-appear-animation="fadeInLeftShorter" data-appear-animation-delay="800">
+                    <h3 class="font-weight-bold text-4 mb-2">Our Mission</h3>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce elementum, nulla vel pellentesque consequat, ante nulla hendrerit arcu.</p>
+                </div>
+                <div class="col-md-4 appear-animation animated appear-animation-visible about-section" data-appear-animation="fadeIn" data-appear-animation-delay="600">
+                    <h3 class="font-weight-bold text-4 mb-2">Our Vision</h3>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce nulla vel pellentesque consequat, ante nulla hendrerit arcu.</p>
+                </div>
+                <div class="col-md-4 appear-animation animated appear-animation-visible about-section" data-appear-animation="fadeInRightShorter" data-appear-animation-delay="800">
+                    <h3 class="font-weight-bold text-4 mb-2">Why Us</h3>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce elementum, nulla vel consequat, ante nulla hendrerit arcu.</p>
+                </div>
+            </div>
+
+            <div class="row">
+                <div class="col text-center">
+                    <a class="btn btn-outline btn-primary text-1 font-weight-semibold text-uppercase px-5 btn-py-2 mb-3" href="/contact/">Book your Free Initial Consultation</a>
+                </div>
+            </div>
+            <!-- <div class="text-center"><a class="btn btn-outline btn-rounded btn-primary  btn-with-arrow mb-2" href="/coaching/">Learn More<span><i class="fas fa-chevron-right"></i></span></a></div> -->
+        </div>
+    </div>
+</div>
 
 <div class="container-fluid">
     <div class="row featured-boxes-full featured-boxes-full-scale clearfix">
@@ -33,94 +81,7 @@
     </div>
 </div>
 <hr>
-<div class="container py-4 my-5">
-    <div class="row justify-content-center mb-4">
-        <div class="col-md-12 col-lg-10">
 
-            <div class="tabs tabs-bottom tabs-center tabs-simple custom-tabs-style-1 mt-2 mb-3">
-                <ul class="nav nav-tabs mb-3">
-                    <li class="nav-item">
-                        <a class="nav-link" href="#tabsNavigationSimpleIcons1" data-toggle="tab">
-                            <span class="featured-boxes featured-boxes-style-6 p-0 m-0">
-                                <span class="featured-box featured-box-primary featured-box-effect-6 p-0 m-0" style="height: 100px;">
-                                    <span class="box-content p-0 m-0">
-                                        <i class="icon-featured icon-bulb icons"></i>
-                                    </span>
-                                </span>
-                            </span>									
-                            <p class="text-color-hover-tertiary  font-weight-bold mb-0 pt-2 text-2 pb-0">Strategy</p>
-                        </a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#tabsNavigationSimpleIcons2" data-toggle="tab">
-                            <span class="featured-boxes featured-boxes-style-6 p-0 m-0">
-                                <span class="featured-box featured-box-primary featured-box-effect-6 p-0 m-0" style="height: 100px;">
-                                    <span class="box-content p-0 m-0">
-                                        <i class="icon-featured icon-mustache icons"></i>
-                                    </span>
-                                </span>
-                            </span>									
-                            <p class="text-color-hover-tertiary font-weight-bold mb-0 pt-2 text-2 pb-0">Creative</p>
-                        </a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#tabsNavigationSimpleIcons3" data-toggle="tab">
-                            <span class="featured-boxes featured-boxes-style-6 p-0 m-0">
-                                <span class="featured-box featured-box-primary featured-box-effect-6 p-0 m-0" style="height: 100px;">
-                                    <span class="box-content p-0 m-0">
-                                        <i class="icon-featured icon-puzzle icons"></i>
-                                    </span>
-                                </span>
-                            </span>									
-                            <p class="text-color-hover-tertiary font-weight-bold mb-0 pt-2 text-2 pb-0">Development</p>
-                        </a>
-                    </li>
-                    <li class="nav-item active">
-                        <a class="nav-link active" href="#tabsNavigationSimpleIcons4" data-toggle="tab">
-                            <span class="featured-boxes featured-boxes-style-6 p-0 m-0">
-                                <span class="featured-box featured-box-primary featured-box-effect-6 p-0 m-0" style="height: 100px;">
-                                    <span class="box-content p-0 m-0">
-                                        <i class="icon-featured icon-rocket icons"></i>
-                                    </span>
-                                </span>
-                            </span>									
-                            <p class="text-color-hover-tertiary font-weight-bold mb-0 pt-2 text-2 pb-0">Marketing</p>
-                        </a>
-                    </li>
-                </ul>
-                <div class="tab-content">
-                    <div class="tab-pane" id="tabsNavigationSimpleIcons1">
-                        <div class="text-center">
-                            <p class="text-tertiary">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur pellentesque neque eget diam posuere porta. Quisque ut nulla at nunc <a href="#">vehicula</a> lacinia. Proin adipiscing porta tellus, ut feugiat nibh adipiscing sit amet. In eu justo a felis faucibus ornare vel id metus. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae;</p>
-                        </div>
-                    </div>
-                    <div class="tab-pane" id="tabsNavigationSimpleIcons2">
-                        <div class="text-center">
-                            <p class="text-tertiary">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur pellentesque neque eget diam posuere porta. Quisque ut nulla at nunc <a href="#">vehicula</a> lacinia. Proin adipiscing porta tellus, ut feugiat nibh adipiscing sit amet. In eu justo a felis faucibus ornare vel id metus. Proin adipiscing porta tellus, ut feugiat nibh adipiscing sit amet. In eu justo a felis faucibus ornare vel id metus. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae;</p>
-                        </div>
-                    </div>
-                    <div class="tab-pane" id="tabsNavigationSimpleIcons3">
-                        <div class="text-center">
-                            <p class="text-tertiary">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur pellentesque neque eget diam posuere porta. Quisque ut nulla at nunc <a href="#">vehicula</a> lacinia. Proin adipiscing porta tellus, ut feugiat nibh adipiscing sit amet. In eu justo a felis faucibus ornare vel id metus.Proin adipiscing porta tellus, ut feugiat nibh adipiscing sit amet. In eu justo a felis faucibus ornare vel id metus. Proin adipiscing porta tellus, ut feugiat nibh adipiscing sit amet. In eu justo a felis faucibus ornare vel id metus. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae;</p>
-                        </div>
-                    </div>
-                    <div class="tab-pane active" id="tabsNavigationSimpleIcons4">
-                        <div class="text-center">
-                            <p class="text-tertiary">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur pellentesque neque eget diam posuere porta. Quisque ut nulla at nunc <a href="#">vehicula</a> lacinia. In eu justo a felis faucibus ornare vel id metus. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae;</p>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            
-        </div>
-    </div>
-    
-    <div class="row">
-        <div class="col text-center">
-            <a class="btn btn-outline btn-primary text-1 font-weight-semibold text-uppercase px-5 btn-py-2 mb-3" href="/contact/">Book your Free Initial Consultation</a>
-        </div>
-    </div>
-</div>
 <section class="section bg-tertiary section-height-3 border-0 m-0">
     <div class="container pb-2">
         <div class="row">
