--- a/landing/templates/contact.html
+++ b/landing/templates/contact.html
@@ -30,7 +30,7 @@
                 </div>
                 
             </div>
-            <div class="col-lg-6">
+            <!-- <div class="col-lg-6">
                 <form id="contactForm" class="contact-form" action="php/contact-form.php" method="POST" novalidate="novalidate">
                     <div class="contact-form-success alert alert-success d-none mt-4" id="contactSuccess">
                         <strong>Success!</strong> Your message has been sent to us.
@@ -43,8 +43,12 @@
                     
                     <div class="form-row">
                         <div class="form-group col">
-                            <label class="required font-weight-bold text-tertiary text-2">Full Name</label>
-                            <input type="text" value="" data-msg-required="Please enter your name." maxlength="100" class="bg-color-grey-scale-10 form-control" name="name" id="name" required="">
+                            <label class="required font-weight-bold text-tertiary text-2">First Name</label>
+                            <input type="text" value="" data-msg-required="Please enter your first name." maxlength="100" class="bg-color-grey-scale-10 form-control" name="name" id="first_name" required="">
+                        </div>
+                        <div class="form-group col">
+                            <label class="required font-weight-bold text-tertiary text-2">Last Name</label>
+                            <input type="text" value="" data-msg-required="Please enter your last name." maxlength="100" class="bg-color-grey-scale-10 form-control" name="name" id="last_name" required="">
                         </div>
                     </div>
                     <div class="form-row">
@@ -66,6 +70,76 @@
                     <div class="form-row">
                         <div class="form-group col">
                             <input type="submit" value="Send Message" class="btn btn-primary btn-modern" data-loading-text="Loading...">
+                        </div>
+                    </div>
+                </form>
+
+            </div> -->
+
+
+
+            <div class="col-lg-6">
+                <form id="contactForm" class="contact-form" action="{% url 'contact' %}" method="POST" >
+                    {% csrf_token %}
+
+                    {% for hidden in form.hidden_fields %}
+                    {{ hidden }}
+                    {% endfor %}
+                    
+                    <!-- <div class="contact-form-success alert alert-success d-none mt-4" id="contactSuccess">
+                        <strong>Success!</strong> Your message has been sent to us.
+                    </div>
+                
+                    <div class="contact-form-error alert alert-danger d-none mt-4" id="contactError">
+                        <strong>Error!</strong> There was an error sending your message.
+                        <span class="mail-error-message text-1 d-block" id="mailErrorMessage"></span>
+                    </div> -->
+
+                    {% if messages %}
+                    <ul class="messages">
+                        {% for message in messages %}
+                        <li  {% if message.tags == 'error' %} 
+                        class=" alert alert-danger"
+                        {% elif message.tags == 'success'%}
+                        class=" alert alert-{{ message.tags }}"
+                        {% endif %}> 
+                            {{ message }} 
+                        </li>
+                        {% endfor %}
+                    </ul>
+                    {% endif %}
+                    
+                    
+                    <div class="form-row">
+                       {% for field in form.visible_fields|slice:"0:2" %}
+                        <div class="form-group col">
+                            {{field.errors}}
+                            <label class="required font-weight-bold text-tertiary text-2">{{ field.label}}</label>
+                            <input type="text" value="" data-msg-required="Please enter your {{ field.label }}." class="bg-color-grey-scale-10 form-control" name="{{field.name}}" id="{{ field.name }}">
+                        </div>
+                        {% endfor %}
+                    </div>
+                    <div class="form-row">
+                        {% for field in form.visible_fields|slice:"2:4" %}
+                        <div class="form-group col-lg-6">
+                            {{field.errors}}
+                            <label class="required font-weight-bold text-tertiary text-2">{{ field.label }}</label>
+                            <input type="{{ field.name }}" data-msg-required="Please enter your {{field.label}}." data-msg-email="Please enter a valid {{field.label}}." class="bg-color-grey-scale-10 form-control" name="{{ field.name }}" id="{{ field.name }}">
+                        </div>
+                        {% endfor %}
+                    </div>
+                    <div class="form-row">
+                        {% for field in form.visible_fields|slice:"4:" %}
+                        <div class="form-group col">
+                            {{field.errors}}
+                            <label class="required font-weight-bold text-tertiary text-2">{{ field.label }}</label>
+                            <textarea data-msg-required="Please enter your {{ field.label }}." rows="5" class="bg-color-grey-scale-10 form-control" name="{{ field.name }}" id="{{ field.name }}"></textarea>
+                        </div>
+                        {% endfor %}
+                    </div>
+                    <div class="form-row">
+                        <div class="form-group col">
+                            <button type="submit" class="btn btn-primary btn-modern" data-loading-text="Loading...">Send Message</button>
                         </div>
                     </div>
                 </form>
