--- a/landing/templates/about.html
+++ b/landing/templates/about.html
@@ -3,7 +3,7 @@
 {% block title %} About {% endblock %} 
 {% block content %}
 
-<section class="page-header page-header-modern page-header-background page-header-background-md parallax overlay overlay-color-dark overlay-show overlay-op-5 mt-0" data-plugin-parallax="" data-plugin-options="{'speed': 1.2}" data-image-src={% static 'img/page-header/page-header-parallax.jpg' %} style="position: relative; overflow: hidden;"><div class="parallax-background" style="background-image: url("#"); background-size: cover; position: absolute; top: 0px; left: 0px; width: 100%; height: 180%; transform: translate3d(0px, -51.25px, 0px); background-position-x: 50%;"></div>
+<section class="page-header page-header-modern page-header-background page-header-background-md parallax overlay overlay-color-dark overlay-show overlay-op-5 mt-0" data-plugin-parallax="" data-plugin-options="{'speed': 1.2}" data-image-src={% static 'img/page-header/page-header-parallax.jpg' %} style="position: relative; overflow: hidden;"><div class="parallax-background" style="background-image: url('#'); background-size: cover; position: absolute; top: 0px; left: 0px; width: 100%; height: 180%; transform: translate3d(0px, -51.25px, 0px); background-position-x: 50%;"></div>
     <div class="container">
         <div class="row">
             <div class="col-md-12 align-self-center p-static order-2 text-center">
