--- a/landing/templates/base.html
+++ b/landing/templates/base.html
@@ -74,7 +74,9 @@
 					
 				</div>
 
-				{% if request.get_full_path == "/contact/" or request.get_full_path == "/about/" %}
+
+				<!-- banner -->
+				<!-- {% if request.get_full_path == "/contact/" or request.get_full_path == "/about/" %}
 				<div class="bg-tertiary border-top border-color-dark">
 					<div class="container">
 						<div class="row py-5">
@@ -111,7 +113,7 @@
 						</div>
 					</div>
 				</div>
-				{% endif %}
+				{% endif %} -->
 			</div>
 		</div>
 
